# ethzasl_icp_mapping

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt.old  README.md  TODO.txt  package.xml  package.xml.old  rosdep.yaml  stack.xml
ethzasl_extrinsic_calibration/: CHANGELOG.rst  CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
ethzasl_extrinsic_calibration/data/: 15_0_0.bag1.txt
ethzasl_extrinsic_calibration/src/: optimize.cpp
ethzasl_gridmap_2d/: CHANGELOG.rst  CMakeLists.txt  manifest.xml  package.xml
ethzasl_gridmap_2d/include/ethzasl_gridmap_2d/: grid-functors.h  grid-map.h
ethzasl_gridmap_2d/src/: grid-map.cpp
ethzasl_icp_mapper/: CHANGELOG.rst  CMakeLists.txt  README.md  manifest.xml  package.xml
ethzasl_icp_mapper/cfg/: icp_dynamic.yaml  input_filters.yaml  input_trail_filters.yaml
ethzasl_icp_mapper/include/ethzasl_icp_mapper/: dynamic_mapper.h  mapper_parameters.h
ethzasl_icp_mapper/launch/2D_scans/: 2D_mapper.launch  demo_2D_scans.vcg  howToTest.txt  icp.yaml  input_filters.yaml  map_post_filters.yaml
ethzasl_icp_mapper/launch/artor/: artor_dynamic_mapper.launch  artor_dynamic_trails.launch  artor_mapper.launch  artor_view.vcg  icp.yaml  icp_dynamic.yaml  input_filters.yaml  input_trail_filters.yaml  map_post_filters.yaml
ethzasl_icp_mapper/launch/husky/: dyn_map_post_filters.yaml  husky_dynamic_mapper.launch  husky_map_interact.launch  husky_mapper.launch  husky_offline_dynamic_mapper.launch  icp.yaml  input_filters.yaml  map_post_filters.yaml
ethzasl_icp_mapper/launch/kingfisher/: fp_kingfisher_dynamic.launch  icp.yaml  input_filters.yaml  kingfisher.launch  local_map_interact.launch  map_post_filters.yaml
ethzasl_icp_mapper/launch/lizhbeth/: icp.yaml  icp_dynamic.yaml  input_dyn_filters.yaml  input_filters.yaml  lizhbeth_dynamic_mapper.launch  lizhbeth_interact_map.launch  lizhbeth_mapper.launch  local_map_interact.launch  map_post_filters.yaml
ethzasl_icp_mapper/launch/mav_velodyne16/: mav_velodyne16_dynamic_mapper.launch  mav_velodyne16_dynamic_trails.launch  simple.launch
ethzasl_icp_mapper/launch/multiSenseSL/: icp.yaml  input_filters.yaml  map_post_filters.yaml  map_pre_filters.yaml  mapper.launch
ethzasl_icp_mapper/launch/nifti/: dynamic_mapper.launch  icp.yaml  input_filters.yaml  map_post_filters.yaml  mapper.launch  mapper_railyard.launch  mapper_srivatsa.launch
ethzasl_icp_mapper/launch/object_inspection/: input_filters.yaml  kinect_face.launch  kinect_inspection.vcg  kinect_object.launch  map_post_filters.yaml  nifti_car.launch  nifti_inspection.vcg
ethzasl_icp_mapper/launch/openni/: icp.yaml  input_filters.yaml  map_post_filters.yaml  map_pre_filters.yaml  sensor.launch  tracker.launch  tracker_dynamic.launch  tracker_viewer-fuerte.launch  tracker_viewer-fuerte.vcg  tracker_viewer-groovy.launch  tracker_viewer-groovy.vcg  tracker_viewer.launch  tracker_viewer.vcg
ethzasl_icp_mapper/launch/ouster/: ouster_dynamic_mapper.launch
ethzasl_icp_mapper/launch/pmd_pico_flexx/: dyn_map_post_filters.yaml  icp.yaml  input_filters.yaml  map_post_filters.yaml  pmd_dynamic_mapper.launch
ethzasl_icp_mapper/launch/smartter/: icp.yaml  input_filters.yaml  map_post_filters.yaml  offline_pointCloud.launch  smartter_mapper.launch
ethzasl_icp_mapper/launch/supermegabot/: icp_dynamic.yaml  record_smb_min.launch  supermegabot_dynamic_mapper.launch  supermegabot_robosense_drivers_only.launch  supermegabot_robosense_dynamic_mapper.launch
ethzasl_icp_mapper/launch/trex/: dyn_map_post_filters.yaml  icp.yaml  input_filters.yaml  (+2 more)
ethzasl_icp_mapper/src/: dynamic_mapper.cpp  dynamic_mapper_node.cpp  dynamic_trails.cpp  interact_mapper.cpp  map_maintainer.cpp  mapper.cpp  mapper_parameters.cpp  matcher_service.cpp  occupancy_grid_builder.cpp
ethzasl_icp_mapper/srv/: CorrectMap.srv  GetBoundedMap.srv  GetMode.srv  InitialTransform.srv  LoadMap.srv
ethzasl_icp_mapper_experiments/: CHANGELOG.rst  CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
ethzasl_icp_mapper_experiments/src/: icp_chain_creation.h  matcher_bag.cpp
ethzasl_icp_mapping/: CHANGELOG.rst  CMakeLists.txt  package.xml
ethzasl_point_cloud_vtk_tools/: CHANGELOG.rst  CMakeLists.txt  manifest.xml  package.xml
ethzasl_point_cloud_vtk_tools/launch/: inputFilters.yaml  maskObjectReconstruction_saveCloud.launch  picoFlexx_saveCloud.launch  realSense_saveCloud.launch  trex_saveCloud.launch
ethzasl_point_cloud_vtk_tools/src/: pointCloudToVtk.cpp  vtkToPointCloud.cpp
kinect_exp_logger/: CMakeLists.txt  mainpage.dox  manifest.xml
kinect_exp_logger/src/: kinect_exp_logger.cpp
libpointmatcher/: CMakeLists.txt  Makefile  manifest.xml  package.xml  rosdoc.yaml
libpointmatcher_ros/: CHANGELOG.rst  CMakeLists.txt  manifest.xml  package.xml  rosdep.yaml
libpointmatcher_ros/src/: point_cloud.cpp  transform.cpp
map_interface/: CMakeLists.txt  interactive_cloud.py  package.xml
map_interface/launch/: interactive_cloud_marker.launch  map_interface.launch
map_interface/rviz/: urdf.rviz
map_interface/src/: map_interface.cc  map_interface_node.cc
map_interface/srv/: SetPose.srv
modular_cloud_matcher/: CMakeLists.txt  Makefile  Makefile.nabo  Makefile.pointmatcher  README.md  mainpage.dox  manifest.xml
modular_cloud_matcher/launch/: icpros-topic.launch  kinect.yaml  kinect_default_params.txt  nifti_mapper.launch  nifti_mapper_icp.yaml  nifti_mapper_input_filters.yaml  nifti_mapper_map_filters.yaml  openni_kinect.rosinstall  openni_kinect_sensor.launch  openni_kinect_tracker.launch  openni_kinect_tracker_viewer.launch  openni_kinect_tracker_viewer.vcg  yaml2txt.py
modular_cloud_matcher/nodes/: cloud_matcher_control.py  cloud_matcher_experiments.py  point_cloud.py  republishBag.py  step_bag.py
modular_cloud_matcher/src/: aliases.h  cloud_conversion.h  get_params_from_server.h  icp_chain_creation.h  mapper.cpp  modular_cloud_matcher.cpp  modular_cloud_matcher_bag.cpp  modular_cloud_matcher_batch.cpp  modular_cloud_matcher_service.cpp  occupancy_grid_builder.cpp  pointCloudToVtk.cpp  vtkToPointCloud.cpp
modular_cloud_matcher/srv/: MatchClouds.srv
(+117 files in other folders)
