<package>
  <name>ethzasl_icp_mapper</name>
  <description>
     2D/3D mapper based on libpointmatcher (http://github.com/ethz-asl/libpointmatcher)
  </description>
  <author>François Pomerleau and Stéphane Magnenat</author>
  <license>new BSD</license>
  <url type="website">http://ros.org/wiki/ethzasl_icp_mapper</url>
  
  <maintainer email="f.pomerleau@gmail.com">Francois Pomerleau</maintainer>

  <version>0.0.1</version>

  <buildtool_depend>catkin_simple</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>rosbag</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>map_msgs</build_depend>
  <build_depend>nabo</build_depend>
  <build_depend>pointmatcher</build_depend>
  <build_depend>pointmatcher_ros</build_depend>
  <build_depend>ethzasl_gridmap_2d</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>interactive_markers</build_depend>
  <build_depend>libargtable2-dev</build_depend>
  <build_depend>yaml-cpp</build_depend>
  <build_depend>eigen</build_depend>

</package>


