cmake_minimum_required(VERSION 2.8.3)
project(ethzasl_point_cloud_vtk_tools)

find_package(catkin REQUIRED 
roscpp
rospy
rosbag
std_msgs
geometry_msgs
sensor_msgs
nav_msgs
tf
tf_conversions
libpointmatcher_ros)

# This was tested for a system install of libpointmatcher
find_package(libpointmatcher CONFIG)

catkin_package(
CATKIN_DEPENDS roscpp rospy rosbag std_msgs geometry_msgs sensor_msgs nav_msgs
tf tf_conversions libpointmatcher libpointmatcher_ros
)

# Set the build type.  Options are:
#  Coverage       : w/ debug symbols, w/o optimization, w/ code-coverage
#  Debug          : w/ debug symbols, w/o optimization
#  Release        : w/o debug symbols, w/ optimization
#  RelWithDebInfo : w/ debug symbols, w/ optimization
#  MinSizeRel     : w/o debug symbols, w/ optimization, stripped binaries
set(CMAKE_BUILD_TYPE RelWithDebInfo)

# c++ 0x
#if("${CMAKE_CXX_COMPILER_ID}" MATCHES "clang") 
#	set(CMAKE_COMPILER_IS_CLANGXX)
#endif ("${CMAKE_CXX_COMPILER_ID}" MATCHES "clang")
if(CMAKE_COMPILER_IS_GNUCXX)
	execute_process(COMMAND ${CMAKE_C_COMPILER} -dumpversion OUTPUT_VARIABLE GCC_VERSION)
	if (GCC_VERSION VERSION_GREATER 4.4 OR GCC_VERSION VERSION_EQUAL 4.4)
		add_definitions(-std=gnu++0x)
	else (GCC_VERSION VERSION_GREATER 4.4 OR GCC_VERSION VERSION_EQUAL 4.4)
		message(SEND_ERROR "You need GCC version 4.4 or greater to compile this library")
	endif (GCC_VERSION VERSION_GREATER 4.4 OR GCC_VERSION VERSION_EQUAL 4.4)
else(CMAKE_COMPILER_IS_GNUCXX)
	message(SEND_ERROR "You need partial C++0x support for N2351, N2672, N1984. Currently this build toolchain supports only GCC >= 4.4. If your compiler supports these specifications, please send us a patch.")
endif(CMAKE_COMPILER_IS_GNUCXX)
# well, this breaks libpointmatcher on non-unix platform,
# please contribute the define for your favorite compiler
# It must support (compiler support in parenthesis):
# - N2351: shared pointers in standard
# - N2672: Initializer lists (gcc)
# - N1984: auto-typed variables (gcc, clang)

set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)

add_definitions(-DBOOST_DATE_TIME_POSIX_TIME_STD_CONFIG)

include_directories(${catkin_INCLUDE_DIRS} ${libpointmatcher_INCLUDE_DIRS})

add_executable(pointCloudToVtk src/pointCloudToVtk.cpp)
target_link_libraries(pointCloudToVtk ${catkin_LIBRARIES} ${libpointmatcher_LIBRARIES})

add_executable(vtkToPointCloud src/vtkToPointCloud.cpp)
target_link_libraries(vtkToPointCloud ${catkin_LIBRARIES} ${libpointmatcher_LIBRARIES})


