<package>
  <name>ethzasl_point_cloud_vtk_tools</name>
  <description>
     Tools to save point clouds to VTK files and to republish them
  </description>
  <author>François Pomerleau and Stéphane Magnenat</author>
  <license>new BSD</license>
  <url type="website">http://ros.org/wiki/ethzasl_point_cloud_vtk_tools</url>

  <version>0.0.1</version>
  <maintainer email="f.pomerleau@gmail.com">Francois Pomerleau</maintainer>

  <buildtool_depend>catkin_simple</buildtool_depend>

  <build_depend>roscpp</build_depend>  
  <build_depend>rospy</build_depend>  
  <build_depend>rosbag</build_depend>  
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>nabo</build_depend>
  <build_depend>pointmatcher</build_depend>
  <build_depend>pointmatcher_ros</build_depend>
  <build_depend>libargtable2-dev</build_depend>  
  <build_depend>yaml-cpp</build_depend>
  <build_depend>eigen</build_depend>  

</package>


